<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.headsmasher.Splash" >

    <RelativeLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Whack"
            android:textColor="#11ADEF"
            android:textSize="30dp" />

        <Button
            android:id="@+id/start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="170dp"
            android:background="@drawable/round_button"
            android:onClick="start_game"
            android:text="@string/start" />

        <Button
            android:id="@+id/modes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/start_game"
            android:layout_alignTop="@+id/start_game"
            android:layout_marginTop="62dp"
            android:background="@drawable/round_button"
            android:onClick="change_mode"
            android:text="@string/modes" />

        <TextView
            android:id="@+id/max_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/moles_left"
            android:layout_alignBottom="@+id/moles_left"
            android:layout_alignRight="@+id/start_game"
            android:textColor="#0142AB" />

        <Button
            android:id="@+id/start_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/modes"
            android:layout_below="@+id/modes"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:onClick="start_camera"
            android:text="Camera" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/show_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#BCAD12"
        android:orientation="vertical"
        android:visibility="gone" >

        <RadioGroup
            android:id="@+id/mode_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/mode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mode1" />

            <RadioButton
                android:id="@+id/mode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode2" />

            <RadioButton
                android:id="@+id/mode3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode3" />
        </RadioGroup>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_mode"
            android:onClick="save_mode" />

    </LinearLayout>

</FrameLayout>